@@ -1,5 +1,6 @@
 Changes in 3.10
-* Erev Purim and Erev Tish'a B'Av
+* Add Erev Purim and Erev Tish'a B'Av
+* Add Pesach Sheni (14 Iyyar)
 
 Changes in 3.9.1
    [revved version number correctly]
